# plan-hikes

./: .gitignore  CLAUDE.md  Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: refresh-data.yml
scripts/: download_srtm.py  refresh_data.py
src/: cli.py  config.py  models.py
src/index/: spatial_join.py
src/ingest/: elevation.py  gtfs.py  osm_trails.py  shabbat.py
src/output/: cli_formatter.py
src/query/: planner.py  transit_router.py
tests/: test_planner.py  test_web.py
web/: app.py
web/static/: app.js  index.html  style.css
