[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "plan-hikes"
version = "0.3.0"
description = "Israel Hiking Transit Planner"
requires-python = ">=3.10"
dependencies = [
    "partridge>=1.1.1",
    "shapely>=2.0",
    "rtree>=1.0",
    "pandas>=2.0",
    "requests>=2.28",
    "typer[all]>=0.9",
    "rich>=13.0",
    "gpxpy>=1.6",
    "rasterio>=1.3",
    "numpy>=1.24",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.22",
]

[project.scripts]
plan-hikes = "src.cli:app"

[tool.setuptools.packages.find]
include = ["src*"]
